# project-helios

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  STATUS.md  client.py  diagram.json  lefttest.py  rear_safety.py  rear_safety.service  requirements.txt  server.py  server_ble.py  server_ble_mac.py  server_nocam.py  settings.json  settings.py  usb_receiver.py  wake_stream.py  wokwi.toml
docs/: FIRMWARE_GUIDE.md  OTA_STACK.md  SYSTEM_STATUS.md  design-iteration-agent-mode.md  firmware-overview.md
firmware/: platformio.ini  sdkconfig.defaults  sdkconfig.wifi_test
firmware/diag/camera_ota/: CMakeLists.txt  admin.c  admin.h  button.c  button.h  camera.c  idf_component.yml  main.c  mic.c  mic_probe.c  mic_probe.h  ota.c  ota_verify.h  query_client.c  query_client.h  recovery.c  recovery.h  sd_card.c  sd_card.h  ws_stream.c  ws_stream.h
firmware/include/: helios.h  mic_helios.h
firmware/src/: ble.c  cam_diag.c  camera.c  config.c  idf_component.yml  main.c  mic.c  pclk_test.c  sdcard.c  speaker.c  wifi.c
firmware/test_apps/: cam_test.c  pclk_test.c  wifi_throughput.c
firmware/test_speaker/: main.c  victory_pcm.h
output/: capture_20260319_145416.pcm  capture_20260319_145431.pcm  capture_20260319_145509.pcm  capture_20260319_145605.pcm  capture_20260319_145607.pcm  capture_20260319_145726.pcm  capture_20260319_145810.pcm  capture_20260319_150138.pcm  capture_20260319_150156.pcm  capture_20260319_150211.pcm  capture_20260319_150236.pcm  capture_20260319_150255.pcm  capture_20260319_150329.pcm  capture_20260319_150339.pcm  capture_20260319_151007.pcm  capture_20260319_151036.pcm  capture_20260319_151104.pcm  capture_20260319_151204.pcm  last_tts_response.pcm
rust/helios_ble/: Cargo.toml  README.md  pyproject.toml
rust/helios_ble/examples/: usage.py
rust/helios_ble/src/: lib.rs
scripts/: Automation_Custom_Script.sh.pi4b  PREPARE_SD.md  ble_ota.py  build-helios-image.sh  extract-wifi.sh  gen_ota_key.py  helios-reachable.sh  helios-wifi-import.service  helios-wifi-import.sh  package_ota.py  prep-pi4b-sd.sh  setup.sh  sign_ota.py  wifi.conf.example
tests/: ble_throughput_test.py  safety_loop_rp2040.py  test_ble_protocol.py  test_image_scale.py  test_scenarios.py  test_server_pipeline.py  ultrasonic_rp2040.py
(+31 files in other folders)
