[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "helios-ble"
version = "0.1.0"
description = "Rust-backed BLE transport for Helios, bypasses bleak's MTU bug on BlueZ"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "helios_ble"
